@@ -1,18 +1,18 @@
 /*
- *  Licensed to the Apache Software Foundation (ASF) under one or more
- *  contributor license agreements.  See the NOTICE file distributed with
- *  this work for additional information regarding copyright ownership.
- *  The ASF licenses this file to You under the Apache License, Version 2.0
- *  (the "License"); you may not use this file except in compliance with
- *  the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package org.apache.harmony.tests.java.io;
@@ -266,13 +266,13 @@ class SerializableObject implements Serializable {
 
     public SerializableObject() {
         d = new Date();
-        i = new Integer(1);
+        i = Integer.valueOf(1);
         e = new Exception("e");
     }
 
     private void writeObject(ObjectOutputStream o) throws IOException {
         o.putFields().put("d", new Date());
-        o.putFields().put("i", new Integer(11));
+        o.putFields().put("i", Integer.valueOf(11));
         o.writeFields();
     }
 
@@ -334,7 +334,7 @@ class SerializableObject2 implements Serializable {
 
     private void writeObject(ObjectOutputStream o) throws IOException {
         ObjectOutputStream.PutField putField = o.putFields();
-        putField.put("i", new Integer(1000));
+        putField.put("i", Integer.valueOf(1000));
         putField.put("d", today);
         putField.put("s", "Richard");
         o.writeFields();
