@@ -1,18 +1,18 @@
 /*
- *  Licensed to the Apache Software Foundation (ASF) under one or more
- *  contributor license agreements.  See the NOTICE file distributed with
- *  this work for additional information regarding copyright ownership.
- *  The ASF licenses this file to You under the Apache License, Version 2.0
- *  (the "License"); you may not use this file except in compliance with
- *  the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 package org.apache.harmony.tests.java.lang.ref;
 
@@ -36,7 +36,7 @@ public class SoftReferenceTest extends junit.framework.TestCase {
      */
     public void test_ConstructorLjava_lang_ObjectLjava_lang_ref_ReferenceQueue() {
         ReferenceQueue rq = new ReferenceQueue();
-        bool = new Boolean(true);
+        bool = Boolean.valueOf(true);
         try {
             SoftReference sr = new SoftReference(bool, rq);
             assertTrue("Initialization failed.", ((Boolean) sr.get())
@@ -58,7 +58,7 @@ public class SoftReferenceTest extends junit.framework.TestCase {
      * java.lang.ref.SoftReference#SoftReference(java.lang.Object)
      */
     public void test_ConstructorLjava_lang_Object() {
-        bool = new Boolean(true);
+        bool = Boolean.valueOf(true);
         try {
             SoftReference sr = new SoftReference(bool);
             assertTrue("Initialization failed.", ((Boolean) sr.get())
@@ -72,7 +72,7 @@ public class SoftReferenceTest extends junit.framework.TestCase {
      * java.lang.ref.SoftReference#get()
      */
     public void test_get() {
-        bool = new Boolean(false);
+        bool = Boolean.valueOf(false);
         SoftReference sr = new SoftReference(bool);
         assertTrue("Same object not returned.", bool == sr.get());
     }
