@@ -5,7 +5,7 @@
  * (the "License"); you may not use this file except in compliance with
  * the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -144,7 +144,7 @@ public class AbstractQueueTest extends TestCase {
         for (int i = 0; i < LAST_INDEX; i++) {
             queue.add(o);
         }
-        Integer I = new Integer(123456);
+        Integer I = Integer.valueOf(123456);
         queue.add(I);
         assertTrue(queue.contains(I));
         Iterator iter = queue.iterator();
@@ -170,7 +170,7 @@ public class AbstractQueueTest extends TestCase {
      * java.util.AbstractQueue#addAll(E)
      */
     public void test_addAllLE_with_null() {
-        List list = Arrays.asList("MYTESTSTRING", null, new Float(123.456));
+        List list = Arrays.asList("MYTESTSTRING", null, Float.valueOf(123.456f));
         try {
             queue.addAll(list);
             fail("should throw NullPointerException");
