@@ -1,18 +1,18 @@
 /*
- *  Licensed to the Apache Software Foundation (ASF) under one or more
- *  contributor license agreements.  See the NOTICE file distributed with
- *  this work for additional information regarding copyright ownership.
- *  The ASF licenses this file to You under the Apache License, Version 2.0
- *  (the "License"); you may not use this file except in compliance with
- *  the License.  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *   http://www.apache.org/licenses/LICENSE-2.0
  *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package org.apache.harmony.tests.java.util;
@@ -608,12 +608,7 @@ public class ArrayDequeTest extends TestCase {
             // expected
         }
         assertTrue(testQue.add(testObjThree));
-        try {
-            result.next();
-            fail("should throw ConcurrentModificationException");
-        } catch (ConcurrentModificationException e) {
-            // expected
-        }
+
         result = testQue.iterator();
         assertEquals(testObjOne, result.next());
         assertEquals(testObjTwo, result.next());
@@ -907,9 +902,12 @@ public class ArrayDequeTest extends TestCase {
         ArrayDeque<String> adq = new ArrayDeque<>();
         adq.add("foo");
 
-        // The ArrayDeque forEachRemaining implementation doesn't use a precise check
-        // for concurrent modifications.
-        adq.iterator().forEachRemaining(s -> adq.add(s));
+        try {
+            adq.iterator().forEachRemaining(s -> adq.add(s));
+            fail("should throw CME");
+        } catch (ConcurrentModificationException ignored) {
+            // expected
+        }
     }
 
     public void test_spliterator() throws Exception {
@@ -947,11 +945,11 @@ public class ArrayDequeTest extends TestCase {
      * java.util.ArrayDeque#Serialization()
      */
     public void test_serialization() throws Exception {
-        assertTrue(testQue.add(new Integer(1)));
-        assertTrue(testQue.add(new Integer(2)));
-        assertTrue(testQue.add(new Integer(3)));
-        assertTrue(testQue.add(new Integer(4)));
-        assertTrue(testQue.add(new Integer(5)));
+        assertTrue(testQue.add(Integer.valueOf(1)));
+        assertTrue(testQue.add(Integer.valueOf(2)));
+        assertTrue(testQue.add(Integer.valueOf(3)));
+        assertTrue(testQue.add(Integer.valueOf(4)));
+        assertTrue(testQue.add(Integer.valueOf(5)));
         SerializationTest.verifySelf(testQue, new SerializableAssert() {
             public void assertDeserialized(Serializable initial,
                     Serializable deserialized) {
@@ -967,11 +965,11 @@ public class ArrayDequeTest extends TestCase {
      */
     @SuppressWarnings({ "unchecked", "boxing" })
     public void testSerializationCompatibility() throws Exception {
-        assertTrue(testQue.add(new Integer(1)));
-        assertTrue(testQue.add(new Integer(2)));
-        assertTrue(testQue.add(new Integer(3)));
-        assertTrue(testQue.add(new Integer(4)));
-        assertTrue(testQue.add(new Integer(5)));
+        assertTrue(testQue.add(Integer.valueOf(1)));
+        assertTrue(testQue.add(Integer.valueOf(2)));
+        assertTrue(testQue.add(Integer.valueOf(3)));
+        assertTrue(testQue.add(Integer.valueOf(4)));
+        assertTrue(testQue.add(Integer.valueOf(5)));
         SerializationTest.verifyGolden(this, testQue, new SerializableAssert() {
             public void assertDeserialized(Serializable initial,
                     Serializable deserialized) {
