@@ -5,7 +5,7 @@
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *     http://www.apache.org/licenses/LICENSE-2.0
+ *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -407,8 +407,8 @@ public class SelectFunctionalityTest extends TestCase {
             assertTrue("Wrong value of rating field", values
                     .containsKey(rating));
             assertEquals("Wrong value of sum field", values.get(rating),
-                    new Integer(sum));
-            assertEquals(new Integer(sum), values.remove(rating));
+                    Integer.valueOf(sum));
+            assertEquals(Integer.valueOf(sum), values.remove(rating));
         }
         result.close();
         assertTrue("Result set has wrong size", values.isEmpty());
